# libldac-dec

./: .clang-format  CMakeLists.txt  README  auto_test.c  ldac_dec_test.c  ldac_enc_test.c
inc/: ldacBT.h
src/: bitalloc_sub_ldac.o.c  decode_ldac.o.c  dequant_ldac.o.c  ext_table.c  imdct_ldac.o.c  ldac.h  ldacBT.c  ldacBT_api.o.c  ldacBT_internal.h  ldacBT_internal.o.c  ldaclib.c  ldaclib.h  ldaclib_api.o.c  mdct_ldac.c  memory_ldac.o.c  others.h  proto_ldac.h  setpcm_ldac.o.c  struct_ldac.h  tables.h  tables_ldac.o.c  tables_sigproc_ldac.o.c  unpack_ldac.o.c
